--- a/Hw-1.html
+++ b/Hw-1.html
@@ -72,14 +72,20 @@
 
     <section>
         <h2>Özgeçmiş</h2>
-        <p>Merhaba, ben Adınız Soyadınız. Yazılım geliştirme alanında bir tutkum var ve bu alanda kendimi geliştirmek için sürekli çalışıyorum.</p>
+        <p>İnşaat mühendisiyken kazandığım temel mühendislik prensipleri ve problem çözme 
+yetenekleri, yazılım alanında başarılı olmam için güçlü bir temel oluşturdu. Kariyerimi 
+yazılım geliştirme ve test otomasyonu alanına yönlendirme kararı aldım ve bu doğrultuda 
+kendimi geliştirmek için çeşitli eğitimler aldım..
+Ekip içinde işbirliği yapma yeteneğimle, yenilikçi çözümler üretmeye ve sürekli 
+iyileştirmeye odaklanıyorum. Müşteri memnuniyetini ön planda tutarak, hem teknik hem de 
+iş hedeflerini karşılamak için çabalıyorum.</p>
     </section>
 
     <section>
         <h2>Eğitim</h2>
         <ol>
-            <li>2023 - Hacettepe Üniversitesi, Bilgisayar Mühendisliği - Mezuniyet Aşamasında</li>
-            <li>2019 - ABC Lisesi, Fen Bölümü - Mezuniyet</li>
+            <li>2023 – 2024 (AUZEF) Bilgisayar Programcılığı (Önlisans)</li>
+            <li>2013 – 2019 Altınbaş Üniversitesi İnşaat Mühendisliği (İngilizce-Lisans)</li>
         </ol>
     </section>
 
@@ -107,12 +113,12 @@
     </section>
 
     <section>
-        <h2>Harita</h2>https://www.google.com.tr/maps/@40.9857619,29.051199,18z?hl=tr&entry=ttu&g_ep=EgoyMDI0MTExOS4yIKXMDSoASAFQAw%3D%3D" width="600" height="450" frameborder="0" st"border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-    </section>yle=
-    <iframe src="
+        <h2>Harita</h2>
+        <iframe src="https://www.google.com.tr/maps/place/Ba%C4%9Fc%C4%B1lar+Meydan/@41.033814,28.8533451,17z/data=!3m1!4b1!4m6!3m5!1s0x14caa52c431973c1:0x1065aa6b745201b0!8m2!3d41.03381!4d28.85592!16s%2Fg%2F11csrytg2p?hl=tr&entry=ttu&g_ep=EgoyMDI0MTExOS4yIKXMDSoASAFQAw%3D%3D" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </section>
 
     <footer>
-        <p>&copy; 2024 Adınız Soyadınız</p>
+        <p>&copy; 2024 Ayşenur Sezgin</p>
     </footer>
 
 </body>
